# breadwallet-core

./: BRAddress.h  BRChainParams.h  BRKey.c  BRPeer.c  BRPeerManager.h  BRTransaction.h  README.md
Java/: Crypto.Makefile
Java/CoreDemo/src/main/java/com/breadwallet/coredemo/: CoreDemoBitcoinClient.java  CoreDemoEthereumClient.java  WalletNavigationActivity.java
Java/Crypto/: CMakeLists.txt  build.gradle
Java/Crypto/src/androidTest/java/com/breadwallet/crypto/api/ethereum/: TransferAIT.java
Java/Crypto/src/main/cpp/jni/: BRCryptoJni.c  BRCryptoJni.h  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinChainParams.c  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinChainParams.h  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinMasterPubKey.c  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinMasterPubKey.h  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinPeerManager.c  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinPeerManager.h  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinWallet.c  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinWallet.h  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinWalletManager.c  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinWalletManager.h  com_breadwallet_crypto_core_bitcoin_jni_CoreBitcoinWalletManagerClient.h  com_breadwallet_crypto_core_common_jni_JniReference.c  com_breadwallet_crypto_core_common_jni_JniReference.h  com_breadwallet_crypto_core_jni_Bip39.c  com_breadwallet_crypto_core_jni_Bip39.h
Java/Crypto/src/main/java/com/breadwallet/crypto/api/: Account.java  AccountFactory.java  Address.java  Amount.java  Bitcoin.java  CryptoApi.java  Currency.java  Network.java  Transfer.java  Unit.java  Wallet.java  WalletManager.java  WalletManagerBackendClient.java  WalletManagerFactory.java  WalletManagerListener.java  WalletManagerPersistenceClient.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/bitcoin/: Bitcoin.java  BitcoinBackendClient.java  BitcoinChainParams.java  BitcoinMasterPubKey.java  BitcoinPersistenceClient.java  BitcoinWalletManagerListener.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/ethereum/: Ethereum.java  Transfer.java  Wallet.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/event/: TransferEvent.java  WalletEvent.java  WalletEventBalanceUpdated.java  WalletEventCreated.java  WalletEventDeleted.java  WalletManagerEvent.java  WalletManagerEventConnected.java  WalletManagerEventDisconnected.java  WalletManagerEventSyncStarted.java  WalletManagerEventSyncStopped.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/events/transfer/: CreatedTransferEvent.java  DeletedTransferEvent.java  TransferEvent.java  TransferEventVisitor.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/events/wallet/: BalanceUpdatedWalletEvent.java  CreatedWalletEvent.java  DeletedWalletEvent.java  WalletEvent.java  WalletEventVisitor.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/events/walletmanager/: ChangedWalletManagerEvent.java  ConnectedWalletManagerEvent.java  DisconnectedWalletManagerEvent.java  SyncEndedWalletManagerEvent.java  SyncStartedWalletManagerEvent.java  SyncStoppedWalletManagerEvent.java  WalletManagerEvent.java  WalletManagerEventVisitor.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/factories/: AccountFactory.java  NetworkFactory.java  WalletManagerFactory.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/provider/: AccountProvider.java  BitcoinNetworkProvider.java  BitcoinWalletManagerProvider.java  CryptoApiProvider.java  NetworkProvider.java  WalletManagerProvider.java
Java/Crypto/src/main/java/com/breadwallet/crypto/api/walletmanager/: WalletManagerBackendClient.java  WalletManagerListener.java  WalletManagerPersistenceClient.java
Java/Crypto/src/main/java/com/breadwallet/crypto/core/: Account.java  CoreCrypto.java  CoreCryptoApi.java
Java/Crypto/src/main/java/com/breadwallet/crypto/core/bitcoin/: BitcoinChainParams.java  BitcoinChainParamsAdapter.java  BitcoinMasterPubKey.java  BitcoinMasterPubKeyAdapter.java  BitcoinNetworks.java  BitcoinWallet.java  BitcoinWalletManager.java
Java/Crypto/src/main/java/com/breadwallet/crypto/core/bitcoin/jni/: CoreBitcoinChainParams.java  CoreBitcoinMasterPubKey.java  CoreBitcoinPeerManager.java  CoreBitcoinWallet.java  CoreBitcoinWalletManager.java  CoreBitcoinWalletManagerClient.java
Java/Crypto/src/main/java/com/breadwallet/crypto/core/common/: CommonWalletManager.java
Java/Crypto/src/main/java/com/breadwallet/crypto/core/common/jni/: JniReference.java
Java/Crypto/src/main/java/com/breadwallet/crypto/core/jni/: BIP39.java
